[gd_scene load_steps=7 format=2]

[ext_resource path="res://ui/ThemeProperty.gd" type="Script" id=1]
[ext_resource path="res://ui/user/SearchUsers.gd" type="Script" id=2]
[ext_resource path="res://ui/ObjectList.gd" type="Script" id=3]
[ext_resource path="res://ui/user/User.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/user/UserPanel.gd" type="Script" id=6]
[ext_resource path="res://ui/user/UsersTab.gd" type="Script" id=8]

[node name="Users" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
custom_constants/margin_right = 5
custom_constants/margin_top = 10
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Split" type="HSplitContainer" parent="."]
margin_left = 5.0
margin_top = 10.0
margin_right = 1187.0
margin_bottom = 759.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/autohide = 0
split_offset = 400

[node name="Left" type="Control" parent="Split"]
margin_right = 600.0
margin_bottom = 749.0
rect_min_size = Vector2( 200, 0 )

[node name="Box" type="VBoxContainer" parent="Split/Left"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Search" type="LineEdit" parent="Split/Left/Box"]
margin_right = 600.0
margin_bottom = 22.0
placeholder_text = ".search.user.entry"
script = ExtResource( 2 )

[node name="ToolButton" type="ToolButton" parent="Split/Left/Box/Search"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -28.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
theme_class = "EditorIcons"
theme_name = "Search"
theme_type = 2
target_property = "icon"

[node name="UserList" type="Tree" parent="Split/Left/Box"]
margin_top = 27.0
margin_right = 600.0
margin_bottom = 722.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 4
hide_folding = true
hide_root = true
select_mode = 1
script = ExtResource( 3 )
column_names = PoolStringArray( ".user.account", ".user.forename", ".user.surname", ".user.role" )
column_sizes = PoolIntArray( 150, 100, 100, 100 )
column_expand = PoolByteArray( 1, 1, 1, 1 )
formatter = 1

[node name="Add" type="Button" parent="Split/Left/Box"]
margin_top = 727.0
margin_right = 600.0
margin_bottom = 749.0
text = ".user.new"
script = ExtResource( 1 )
theme_class = "EditorIcons"
theme_name = "Add"
theme_type = 2
target_property = "icon"

[node name="Rigth" type="Control" parent="Split"]
margin_left = 608.0
margin_right = 1182.0
margin_bottom = 749.0
rect_min_size = Vector2( 200, 0 )

[node name="Box" type="VBoxContainer" parent="Split/Rigth"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="User" parent="Split/Rigth/Box" instance=ExtResource( 5 )]
margin_right = 574.0

[node name="State" type="Label" parent="Split/Rigth/Box"]
margin_top = 136.0
margin_right = 574.0
margin_bottom = 158.0

[node name="ShowBooks" type="Button" parent="Split/Rigth/Box"]
margin_top = 162.0
margin_right = 574.0
margin_bottom = 184.0
text = ".user.books"

[node name="Edit" type="Button" parent="Split/Rigth/Box"]
margin_top = 188.0
margin_right = 574.0
margin_bottom = 210.0
text = ".action.edit"

[node name="Editing" type="HBoxContainer" parent="Split/Rigth/Box"]
visible = false
margin_top = 214.0
margin_right = 602.0
margin_bottom = 238.0

[node name="Cancel" type="Button" parent="Split/Rigth/Box/Editing"]
margin_right = 120.0
margin_bottom = 24.0
rect_min_size = Vector2( 120, 0 )
text = ".action.cancel"

[node name="Apply" type="Button" parent="Split/Rigth/Box/Editing"]
margin_left = 124.0
margin_right = 478.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = ".action.apply"

[node name="Delete" type="Button" parent="Split/Rigth/Box/Editing"]
margin_left = 482.0
margin_right = 602.0
margin_bottom = 24.0
rect_min_size = Vector2( 120, 0 )
text = ".action.delete"
script = ExtResource( 1 )
theme_class = "EditorIcons"
theme_name = "Remove"
theme_type = 2
target_property = "icon"

[node name="Adding" type="HBoxContainer" parent="Split/Rigth/Box"]
visible = false
margin_top = 214.0
margin_right = 570.0
margin_bottom = 236.0

[node name="Cancel" type="Button" parent="Split/Rigth/Box/Adding"]
margin_right = 120.0
margin_bottom = 22.0
rect_min_size = Vector2( 120, 0 )
text = ".action.cancel"

[node name="Add" type="Button" parent="Split/Rigth/Box/Adding"]
margin_left = 124.0
margin_right = 570.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = ".action.apply"
[connection signal="search_results" from="Split/Left/Box/Search" to="Split/Left/Box/UserList" method="fill"]
[connection signal="text_entered" from="Split/Left/Box/Search" to="Split/Left/Box/Search" method="_on_search"]
[connection signal="pressed" from="Split/Left/Box/Search/ToolButton" to="Split/Left/Box/Search" method="_on_search"]
[connection signal="item_selected" from="Split/Left/Box/UserList" to="Split/Left/Box/UserList" method="_on_item_selected"]
[connection signal="object_selected" from="Split/Left/Box/UserList" to="Split/Rigth/Box" method="_on_user_selected"]
[connection signal="pressed" from="Split/Left/Box/Add" to="Split/Rigth/Box" method="_on_add"]
[connection signal="add_user" from="Split/Rigth/Box" to="Split/Left/Box/UserList" method="add_and_select_object"]
[connection signal="show_books" from="Split/Rigth/Box" to="." method="_on_show_books"]
[connection signal="update_user" from="Split/Rigth/Box" to="Split/Left/Box/UserList" method="update_selected"]
[connection signal="pressed" from="Split/Rigth/Box/ShowBooks" to="Split/Rigth/Box" method="_on_show_books"]
[connection signal="pressed" from="Split/Rigth/Box/Edit" to="Split/Rigth/Box" method="_on_edit"]
[connection signal="pressed" from="Split/Rigth/Box/Editing/Cancel" to="Split/Rigth/Box" method="_on_edit_cancel"]
[connection signal="pressed" from="Split/Rigth/Box/Editing/Apply" to="Split/Rigth/Box" method="_on_edit_apply"]
[connection signal="pressed" from="Split/Rigth/Box/Editing/Delete" to="Split/Rigth/Box" method="_on_edit_delete"]
[connection signal="pressed" from="Split/Rigth/Box/Adding/Cancel" to="Split/Rigth/Box" method="_on_edit_cancel"]
[connection signal="pressed" from="Split/Rigth/Box/Adding/Add" to="Split/Rigth/Box" method="_on_edit_add"]
